desplaying collaborators from records in account , contact ,opport
Former-commit-id: 7aaaa68d07d4627f6becaa2d2d7fe19f0b1e74fc [formerly 654e55239df06eb696186c506cb9b98ca7dbd14d] [formerly 7233c7d3f7fdcce883dcd5a35c7aa896d924b40b [formerly d83838667adc171f990235bba52453452741036a]]
Former-commit-id: 3013b2d191488e6288283965a9a5f24de19d5346 [formerly 193fb55aca84134f892518cda3da314f7f64af4e]
Former-commit-id: e1c159238d5a441c1ab2b84d24d063fbeee1b105

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -179,7 +179,7 @@
                                             <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{_('Needs')}}</a></li>
                                             <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">{{_('Opportunities')}}</a></li>
                                             <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{_('Cases')}}</a></li>
-                                            <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{_('Details of Lead')}}</a></li>
+                                            <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{_('Details of Account')}}</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -2350,11 +2350,11 @@
                     <div class="radio-list">
 
                         <label >
-                            <input type="radio" name="optionRadio" value="public" ng-model="account.access" />
+                            <input type="radio" name="optionRadio" value="public" ng-model="account.access" ng-click="share()"/>
                             {{ _("public: Anyone within your organization can access and find")}}
                         </label>
                         <label >
-                            <input type="radio" name="optionRadio"  value="private" ng-model="account.access" />
+                            <input type="radio" name="optionRadio"  value="private" ng-model="account.access"  ng-click="share()"/>
                             {{ _("private: only you and your collaborators")}}
                         </label>
                     </div>
@@ -2386,7 +2386,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" ng-click="share(slected_memeber)" class="btn blue addContactNow">{{_("Share")}}</button>
+                <button  type="submit" data-dismiss="modal" aria-hidden="true" ng-click="share()" class="btn blue addContactNow">{{_("Share")}}</button>
             </div>
             </form>
         </div>
