--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -314,11 +314,11 @@
                         </div>
                         <div class="portlet-body" id="chats">
                                   <label class="radio line inbox-label">
-                                        <input type="radio" value="public" ng-model="account.access" />
+                                        <input type="radio" value="public" ng-model="opportunity.access"/>
                                         {{_('public: Anyone within your organization can access and find')}}
                                   </label>
                                   <label class="radio line inbox-label">
-                                        <input type="radio"  value="private" ng-model="account.access" />
+                                        <input type="radio"  value="private" ng-model="opportunity.access"/>
                                         {{_('private: only you and your collaborators')}}
                                   </label>
                         </div>
