--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -155,7 +155,7 @@
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
-                <a href="http://twitter.com/<%= tweet.screen_name %>" class="startup-link" title="account.name">
+                <a href="http://twitter.com/<%= tweet.screen_name %>" target="new" class="startup-link" title="account.name">
                 
                 <img href="http://twitter.com/<%= tweet.screen_name %>" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="<%=tweet.profile_image_url %>">
                 </a>
@@ -163,7 +163,7 @@
               <div class="text">
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
-                  <a href="http://twitter.com/<%= tweet.screen_name %>" class="profile-link">
+                  <a href="http://twitter.com/<%= tweet.screen_name %>" target="new" class="profile-link">
                     <%= tweet.author_name %>
                   </a>
                 </div>
@@ -171,7 +171,7 @@
                   <span>
                       <%=fromNow(lead.updated_at)%>
                   </span>
-                  <a href="http://twitter.com/<%= tweet.screen_name %>/status/<%= tweet.id %>" >
+                  <a href="/#/discovers/show/<%= tweet.id %>" ng-click="dtails_of_tweets(tweet.id)" target="new" >
                   <span  class="contact-title" >
                     <%= tweet.content %>
                   </span>
