--- a/templates/base.html
+++ b/templates/base.html
@@ -115,9 +115,9 @@
         <ul class="nav navbar-nav pull-right">
 
 
-              <!--<li id="chromeExtension" class="dropdown user chrome-ext hidden-xs"  >
+              <!--li id="chromeExtension" class="dropdown user chrome-ext hidden-xs"  >
                   <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
-              </li>-->
+              </li-->
 
               <li class="dropdown user">
                 <a href="/#/admin/users" class="dropdown-tog">
