fix some bugs related to discovery service
Former-commit-id: 3ad16c0aeb7e441efdc8563c9984cc3ce2f574de [formerly b125061a463f95d3e858268e9809944620f74e19] [formerly a37c86fb6e0c165a64542bb947460807d9a804a0 [formerly 08cdab52b02aa4fb861fd678b1036cf604c09d5f]]
Former-commit-id: f9c45939b808d28e184e2415a53fb721e6d5a550 [formerly 65c4db20c2260f22293605075e2a680dcaf7a510]
Former-commit-id: 40c1558f7af6b2893192e8ce707df53df3e17ae6

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -171,7 +171,7 @@
                   <span>
                       <%=fromNow(lead.updated_at)%>
                   </span>
-                  <a href="/#/discovers/show/<%= tweet.id %>" ng-click="dtails_of_tweets(tweet.id)" target="new" >
+                  <a href="http://twitter.com/<%= tweet.screen_name %>/status/<%= tweet.id %>/" ng-click="details_of_tweets()" target="new" >
                   <span  class="contact-title" >
                     <%= tweet.content %>
                   </span>
