--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -93,6 +93,8 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
                                                     <div class="col-md-12">
