--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1758,14 +1758,14 @@
 
                         </div>
                     </div>
-                    <!--div class="control-group">
-                        <label  class="required col-md-3 control-label">{{_("Company")}} </label>
+                    <div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Account")}} </label>
 
                         <div class="col-md-9">
-                          <input type="text" class="form-control"   id="id_Company" ng-model="contact.company">
+                          <input type="text"  ng-model="searchAccountQuery" typeahead="result as result.name  for result in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{ _('Company')}}">
 
                         </div>
-                    </div-->
+                    </div
 
 
 
