--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -171,7 +171,7 @@
                   <span>
                       <%=fromNow(lead.updated_at)%>
                   </span>
-                  <a href="http://twitter.com/<%= tweet.screen_name %>/status/<%= tweet.id %>/" ng-click="details_of_tweets()" target="new" >
+                  <a  target="new" >
                   <span  class="contact-title" >
                     <%= tweet.content %>
                   </span>
