--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -670,7 +670,15 @@
               <div class="modal-body">
                  <form id="editCase" name="editlead"  class="form-horizontal">
 
-
+                  <div class="form-group">
+                                <label  class=" col-md-3 control-label">{{_("Owner")}} </label>
+                                <div class="col-md-9">
+                                    <select class="form-control" ng-model="ownerSelected" ng-options="user.google_display_name for user in users" >
+                                        <option value=""><%=casee.owner.google_display_name%> </option>
+                                        <!--option value=""><%=stage_selected.name%></option-->
+                                    </select>
+                                </div>
+                  </div>
                   <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Name")}} </label>
 
