--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1748,6 +1748,15 @@
                     <div class="modal-body">
                         <form id="editLead" name="editlead"  class="form-horizontal">
                             <div class="form-group">
+                                <label  class=" col-md-3 control-label">{{_("Owner")}} </label>
+                                <div class="col-md-9">
+                                    <select class="form-control" ng-model="ownerSelected" ng-options="user.google_display_name for user in users" >
+                                        <option value=""><%=lead.owner.google_display_name%> </option>
+                                        <!--option value=""><%=stage_selected.name%></option-->
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <label  class="required col-md-3 control-label">{{_("First Name")}} *</label>
 
                                 <div class="col-md-9">
