before pull from iogrow
Former-commit-id: a997f5703206a6e07a8bc9e6047944c5e094e9c3 [formerly 5874a2c07a9f4bd9f61eb35140310268fd2998b8] [formerly 8342431ac1c6c71ac0c5eaf60ac86686451b28ed [formerly 26ce8d4c79e39b554c17376e82a52e6faa6e6d50]]
Former-commit-id: 76b6a1355622158a9c28e3ed9d948b5fc7668051 [formerly 82fde3a08a46a19a48bae02af2c9ddb5b3ec9f60]
Former-commit-id: 28497bb70608cbc6be6ef1b2f5802b8be4191f36

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -289,8 +289,8 @@
             </div>
             <div class="tagsSection" ng-class="{hidden: account.tags==null}">
               <div class="sectionContent">
-                <a ng-repeat="tag in account.tags" href="/#/search/type:Account tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
-                </a>
+                 <span ng-repeat="tag in account.tags"  draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %>  </span>
+                 <div class="clearfix"></div>
               </div>
             </div>
           </div>
