--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -208,7 +208,7 @@
             </div>
 
         </div>
-         <div class="row">
+         <div class="row margin-bottom-15">
           <div class="col-md-12">
               <ul class="list-unstyled showTagsList">
                  <li ng-show="task.assignees" class="inline-tags">{{ _('Assignees:')}}</li>
