--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -220,16 +220,16 @@
                       <div class="news-blocks blank-card blank-card-yellow newsCard">
                         <h3>{{ _('Opportunity Details')}}</h3>
                         <div class="stage-chart-block">
-                          <div class="col-md-5 ">
+                          <div class="col-md-5">
                             <div class="stage" >
                               <div easypiechart class="chart"  options="chartOptions" percent="opportunity.current_stage.probability"></div>
-                              <div class="oppStage  col-md-12">
+                              <div class="oppStage">
                                 <span><%=opportunity.current_stage.name%></span><br>
                                 <span><%=opportunity.current_stage.probability%> %</span>
                               </div>
                             </div>
                           </div>
-                           <div class="oppPrice col-md-7">
+                           <div class="oppPrice col-md-7 margin-bottom-15">
                             <div class="form-group currencyForm" ng-show="showPriceForm">
                               <div class="col-md-12 margin-bottom-10">
                                   <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit ">
@@ -620,16 +620,6 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-12 margin-bottom-10">
-                                        <div class="input-icon ">
-                                            <i class="fa fa-bell-o"></i>
-
-                                              <input cusdatetimepicker data-model="newTask.reminder" type="text" class="form-control" placeholder="{{_('Add a reminder')}}" value="" id="leadEventStartsAt">
-                                          </div>
-
-                                    </div>
-                                </div>
-                                <div class="row">
                                     <div class="col-md-12">
                                         <div class='assigneeMemberToTask' >
                                             <div class="input-icon ">
@@ -646,16 +636,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                      <div class="col-md-12">
-                                          <select id="select2_sample2" class="form-control select2" multiple>
-                                              <option ng-repeat="tag in tags"
-                                                      value='<%=tag.entityKey%>'>
-                                                  <%=tag.name%>
-                                              </option>
-                                          </select>
-                                      </div>
-                                 </div>
                       </div>
                       <div class="row">
                           <div class="col-md-12 margin-top-10">
