--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -606,19 +606,19 @@
                     <div class="radio-list">
 
                             <label >
-                            <input type="radio" name="optionRadio" value="public" ng-model="event.access" />
+                            <input type="radio" name="optionRadio" value="public" ng-click="share" ng-model="event.access" />
                             {{ _("public: Anyone within your organization can access and find") }}
                             </label>
                             <label >
-                            <input type="radio" name="optionRadio"  value="private" ng-model="event.access" />
+                            <input type="radio" name="optionRadio" ng-click="share()" value="private" ng-model="event.access" />
                             {{ _("private: only you and your collaborators") }}
                             </label>
                     </div>
                     <hr/>
                     <div class=''>
                     <p>{{ _("Collaborators:") }}</p>
-                        <div ng-repeat="collaborator in contact.collaborators_list" class="invitation">
-                          <img class="google-avatar" ng-src="<%=collaborator.photo%>"/>
+                        <div ng-repeat="collaborator in collaborators_list" class="invitation">
+                          <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
                            <%=collaborator.display_name%> < <%=collaborator.email%> >
                         </div>
 
@@ -642,7 +642,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Share")}}</button>
+                <button  type="submit" ng-click="share()" class="btn blue addContactNow">{{_("Share")}}</button>
               </div>
                </form>
                </div>
