import contacts from outlook csv file
Former-commit-id: 764b492b2e9ecb76839f3ac8952f3c6926814473 [formerly 1076b786569a10d4ff81fc80428315e6794941f5] [formerly 1884daa5263387b5b4419ce61cf56f1bfa8cd30e [formerly fea5dc843cb73f7fa454bbcb6782fdba6bc31e61]]
Former-commit-id: ed82d3a6306a634be1df54f9943aa40fab7b5c45 [formerly e57ca5f1dfd066a1a1461299a04962542c5b1a33]
Former-commit-id: 91775ba26363015f79a3d50b968c31bd74c7c5e3

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -404,7 +404,17 @@
               <h3 id="myModalLabel">{{_("Import contacts")}}</h3>
             </div>
             <div class="modal-body">
-                <p>{{_("We support importing CSV files from Google Contacts, Outlook, Outlook Expressand some other apps. Please select a CSV file to upload:")}}</p>
+                <p>{{_("We support importing CSV files from Google Contacts, Outlook, Outlook Express and some other apps. Please select a CSV file to upload:")}}</p>
+                <div class="radio-list">
+                    
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios23"  ng-model="file_type" value="google"  checked="" > Google CSV format
+                    </label>
+                    <label>
+                        
+                        <input type="radio" name="optionsRadios" id="optionsRadios22" ng-model="file_type" value="outlook" checked=""> Outlook CSV format
+                    </label>
+                  </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn default" data-dismiss="modal">{{_("Close")}}</button>
