--- a/templates/products/features/list.html
+++ b/templates/products/features/list.html
@@ -6,7 +6,7 @@
         <ul class="page-sidebar-menu">
         
         {% for tab in tabs %}
-           <li id="id_{{tab.name}}"  ><a href="{{tab.url}}"><i class="icon-cogs"></i><span class="title">{{tab.label}}</span></a></li>
+           <li id="id_{{tab.name}}"  ><a href="{{tab.url}}"><i class="icon-cogs"></i><span class="title">{{_(tab.label)}}</span></a></li>
           {% endfor %}
         </ul>
      
