--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -2,7 +2,7 @@
     <div class="currentApp">
        <div class="btn-group">
            <a class="filterItem" href="#" data-toggle="dropdown" >
-            {{active_app.label}}
+            {{_(active_app.label)}}   
             <i class="icon-angle-down"></i>
            </a>
            <ul class="dropdown-menu">
