Fix inlinePatch form in editTag fix #844
Former-commit-id: b7e1beae98280e3534bb309313f2d196a56037e8 [formerly 66b608074a6d2a754a8619df0b76bc73d608b680] [formerly 30b592494168b594d069c5fc086a9a385b5256a7 [formerly 2fd6274cb447deae1ccdb1fd5d9fd99f778786a0]]
Former-commit-id: d7fa39cced050bfe09ed396dfc5df14d9f7f7601 [formerly 7717dee5a1072876faea96a8cec8bcff74302f50]
Former-commit-id: 091527698f7ec7c5d96679749bcaa57f9f385d67

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -287,15 +287,15 @@
         <ul id="slimList" class="list-group tags-list ">
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
-              <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;" 
+              <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable class="with-color" ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;" 
 
-                  ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
+                  ng-model='tag_item.name' onhide="hideEditable()" onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                
                   <%= tag_item.name %>
 
               </span>
 
-              <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
+              <input type="checkbox" ng-show="(tag_item!=edited_tag)&&(!manage_tags)"  ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
               <!--<span class="pull-right tag-checked" ng-show="selected_tags.indexOf(tag_item) != -1">
                   <i class="fa fa-check-circle-o" style="color:idealTextColor(<%=tag_item.color%>);"></i>
               </span>-->
