--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -1056,11 +1056,11 @@
                     <div class="row">
                     <ul class="list-group tags-list" id="slimList">
                       <li  ng-repeat="tag_item in tags" class="list-group-item tags-list-item">
-                        <span  editable-text="tag_item.name" draggable ng-drag="dragTag(tag_item)" style="background-color:<%=tag_item.color%>;color:idealTextColor(<%=tag_item.color%>);" class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"
-                         ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
+                        <span  editable-text="tag_item.name" draggable ng-drag="dragTag(tag_item)" style="background-color:<%=tag_item.color%>;color:idealTextColor(<%=tag_item.color%>);" class="with-color" ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"
+                         ng-model='tag_item.name'  onhide="hideEditable()"  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                         <%= tag_item.name %> 
                         </span>
-                        <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
+                        <input type="checkbox" ng-show="(tag_item!=edited_tag)&&(!manage_tags)" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
                        <!-- <span class="pull-right tag-checked" ng-show="selected_tags.indexOf(tag_item) != -1">
                           <i class="fa fa-check-circle-o" style="color:idealTextColor(<%=tag_item.color%>);"></i>
                         </span>-->
