--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -343,13 +343,13 @@
             <ul class="list-group tags-list">
               <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
                 <div class="row">
-                  <span  editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
-                  ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
+                  <span  editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" draggable class="with-color" ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
+                  ng-model='tag_item.name'  onhide="hideEditable()" onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                       <%= tag_item.name %>
                   </span>
                  <input
-                 type="checkbox"
-                 ng-show="!manage_tags"
+                 type="checkbox" ng-show="(tag_item!=edited_tag)&&(!manage_tags)"
+                 ng-class='{editable-hide: color.name==tag.color.name}'
                  ng-click="selectTag(tag_item,$index,$event)"
                  style="margin-right: 10px;"
                  class="pull-right customCheck"
