--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -24,6 +24,7 @@
 
           <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Recent')}} <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span> </span>
           <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="popular_tweets();selectedOption ='my'">{{ _('Popular')}} <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span></span>
+          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('View')}} <span class="hidden-xs hiddenOnxs">{{ _('On ')}}</span><span class="hidden-xs hiddenOnxs">{{ _(' Maps')}}</span></span>
 
           
             <div class="btn-group visibleOnPhone">
@@ -35,6 +36,7 @@
                   <li><a  ng-click="filterByOwner();selectedOption ='all'" href="#" data-toggle="modal">{{ _('Recent posts') }}</a></li>
                   <li><a ng-click="filterByOwner('{{ME}}');selectedOption ='my'" href="#" data-toggle="modal">{{ _('Popular posts') }}</a></li>
                   <li><a ng-click="showTagFilterCard();selectedOption ='tags'" href="#" data-toggle="modal">{{ _('Tags') }}</a></li>
+                  <li><a ng-click="filterByOwner('{{MAP}}');selectedOption ='map'" href="#" data-toggle="modal">{{ _('View on maps') }}</a></li>
                 </ul>
           </div>
         <span role="button" class="filterItem hiddenOnPhone hiddenOnmd"  ng-class="{activeFilter: selectedOption =='tags'}" ng-click="showTagFilterCard();selectedOption ='tags'"><i class="fa fa-tags"></i><span class="hidden-xs hiddenOnxs">{{_('Filter by')}} </span> {{_('Tags')}}</span>
@@ -101,7 +103,8 @@
     <div class="row ">
     <div class="tab-pane">
     <div class="row ">
-      <div class="col-md-12 waterfall" ng-hide="blankStatelead">
+    <div ng-show="mapshow" style="height:600px; width:100%;" id="map-canvas"/>
+      <div class="col-md-12 waterfall" ng-show="tweetsshow" ng-hide="blankStatelead">
         <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
@@ -171,7 +174,7 @@
                   <span>
                       <%=fromNow(lead.updated_at)%>
                   </span>
-                  <a  target="new" >
+                  <a href="" ng-click="details_of_tweets(tweet.id)" target="new" >
                   <span  class="contact-title" >
                     <%= tweet.content %>
                   </span>
@@ -246,7 +249,7 @@
 </div>
 <div class="fixed-labelsCard visible-md visible-lg">
   
-  <div class="row">
+  <div class="row" ng-show="tweetsshow">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
       <div class="portlet-title">
