desplay collaborators in event's sharing
Former-commit-id: 7ee22240d545d585c2b29a327be18244090d47e3 [formerly 89603f94ff07d8d41d43b3ddbb88c809096149e2] [formerly 70f463bcf4db6465b1526f7ac9d4e75d083e44c4 [formerly b87fa54e574188948f57c5ebaab8006240b78da3]]
Former-commit-id: 372cacb6aaa715e703a240adf12a58858a52c13f [formerly 64fa68999234a9b3ac34c92d46cb29dec5980ea4]
Former-commit-id: 345ebe95263ba6099ec3d9a51cef8a30ea9f05ee

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -600,13 +600,13 @@
                 <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addMember" name="addaccount" ng-submit="share(slected_memeber)" class="form-horizontal">
+                 <form id="addMember" name="addaccount" ng-submit="share()" class="form-horizontal">
 
                     <p>{{ _("Who has access:") }}</p>
                     <div class="radio-list">
 
                             <label >
-                            <input type="radio" name="optionRadio" value="public" ng-click="share" ng-model="event.access" />
+                            <input type="radio" name="optionRadio" value="public" ng-click="share()" ng-model="event.access" />
                             {{ _("public: Anyone within your organization can access and find") }}
                             </label>
                             <label >
@@ -633,10 +633,10 @@
                       <hr/>
                     </div>
 
-                    <p>{{ _("Invite collaborators:") }}</p>
-                    <div class="form-group">
-                      <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group') }}">
-                    </div>
+                       <p>{{ _("Invite collaborators:")}}</p>
+                        <div class="form-group">
+                            <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
+                        </div>
 
                       </div>
               </div>
